--- a/drumKit.html
+++ b/drumKit.html
@@ -10,6 +10,14 @@
 <body>
     <div class="container">
         <div data-key="" class="key">A</div>
+        <div data-key="" class="key">S</div>
+        <div data-key="" class="key">D</div>
+        <div data-key="" class="key">F</div>
+        <div data-key="" class="key">G</div>
+        <div data-key="" class="key">H</div>
+        <div data-key="" class="key">J</div>
+        <div data-key="" class="key">K</div>
+        <div data-key="" class="key">L</div>
     </div>
     <div class="music">
 
